module java.base does not open java.lang to unnamed module @430d8193; to use the thread-local-reset capability on Java 24 or later, use this JVM option: --add-opens java.base/java.lang=ALL-UNNAMED