@@ -1,3 +1,5 @@
+import io.quarkus.gradle.tasks.QuarkusDev
+
 plugins {
     alias(libs.plugins.quarkus)
 }
@@ -11,4 +13,9 @@ dependencies {
 
 test {
     systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+}
+
+tasks.withType(QuarkusDev).configureEach {
+    jvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
 }
